--- a/client/src/stylesheets/App.css
+++ b/client/src/stylesheets/App.css
@@ -14,3 +14,27 @@
   border-radius: 10px;
   padding: 20px;
 }
+
+.card-title {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.card-info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-date {
+  align-self: center;
+  font-style: italic;
+  font-size: 0.8rem;
+}
+
+.card-author {
+  font-size: 1.2rem;
+}
+
+.card-content {
+  margin-top: 20px;
+}
