--- a/client/src/stylesheets/App.css
+++ b/client/src/stylesheets/App.css
@@ -1,7 +1,13 @@
 .app {
+  display: flex;
+  flex-direction: column;
+}
+
+.posts {
   padding: 40px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 20px;
 }
 
