--- a/client/src/stylesheets/Card.css
+++ b/client/src/stylesheets/Card.css
@@ -31,3 +31,17 @@
 .card-content {
   margin-top: 20px;
 }
+
+.comment {
+  height: 35px;
+  width: auto;
+}
+
+.more-info {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  font-style: normal;
+  align-self: flex-end;
+  margin-top: auto;
+}
