--- a/client/src/stylesheets/Card.css
+++ b/client/src/stylesheets/Card.css
@@ -42,6 +42,11 @@
   align-items: center;
   font-size: 16px;
   font-style: normal;
-  align-self: flex-end;
+}
+
+.post-link {
   margin-top: auto;
+  align-self: flex-end;
+  text-decoration: none;
+  color: inherit;
 }
