--- a/client/src/stylesheets/Post.css
+++ b/client/src/stylesheets/Post.css
@@ -1,14 +1,11 @@
-.app {
+.blog-post {
   display: flex;
   flex-direction: column;
   height: 100%;
 }
 
-.posts {
-  padding: 40px;
+.post {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 20px;
   height: 100%;
 }
