--- a/client/src/stylesheets/Post.css
+++ b/client/src/stylesheets/Post.css
@@ -1,11 +1,37 @@
 .blog-post {
   display: flex;
   flex-direction: column;
+  align-items: center;
   height: 100%;
 }
 
 .post {
   display: flex;
   flex-direction: column;
+  width: 600px;
   height: 100%;
+  padding: 40px;
+}
+
+.post-title {
+  margin: 0;
+}
+
+.post-author {
+  margin: 0;
+  font-weight: normal;
+}
+
+.post-date {
+  margin: 0;
+  font-weight: normal;
+  font-style: italic;
+}
+
+.post-content {
+  margin-left: 30px;
+}
+
+.post-comments {
+  margin-left: 30px;
 }
