--- a/client/src/stylesheets/LogIn.css
+++ b/client/src/stylesheets/LogIn.css
@@ -4,8 +4,13 @@
   flex-direction: column;
 }
 
-.login-form {
+.login-body {
   height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.login-form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,4 +32,9 @@
 .login-form button {
   height: 30px;
   width: 100px;
+}
+
+.login-error {
+  align-self: center;
+  color: red;
 }
