--- a/client/src/stylesheets/Post.css
+++ b/client/src/stylesheets/Post.css
@@ -35,3 +35,21 @@
 .post-comments {
   margin-left: 30px;
 }
+
+.comment-prompt {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.comment-form {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  gap: 10px;
+}
+
+.submit-comment {
+  height: 40px;
+  width: 160px;
+  align-self: center;
+}
