--- a/admin/src/stylesheets/Comment.css
+++ b/admin/src/stylesheets/Comment.css
@@ -17,3 +17,32 @@
   width: 320px;
   padding: 10px;
 }
+
+.delete {
+  height: 25px;
+  width: auto;
+  cursor: pointer;
+}
+
+.delete:hover {
+  filter: invert(30%) sepia(100%) saturate(7107%) hue-rotate(358deg) brightness(116%) contrast(129%);
+}
+
+.delete-icon {
+  align-self: flex-end;
+  margin-right: 10px;
+}
+
+.deletion-prompt {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: dashed 2px red;
+  padding: 10px;
+  margin: 5px;
+}
+
+.del-btn {
+  margin: 5px;
+  width: 50px;
+}
