--- a/admin/src/stylesheets/App.css
+++ b/admin/src/stylesheets/App.css
@@ -1,6 +1,7 @@
 .app {
-  min-height: 100%;
+  height: 100%;
   display: flex;
+  flex-grow: 1;
   flex-direction: column;
   align-items: center;
   gap: 20px;
