--- a/admin/src/stylesheets/Card.css
+++ b/admin/src/stylesheets/Card.css
@@ -32,7 +32,8 @@
   margin-top: 20px;
 }
 
-.comment {
+.comment,
+.edit {
   height: 35px;
   width: auto;
 }
@@ -42,6 +43,13 @@
   align-items: center;
   font-size: 16px;
   font-style: normal;
+}
+
+.card-options {
+  align-self: flex-end;
+  display: flex;
+  gap: 10px;
+  margin-top: auto;
 }
 
 .post-link {
