Make site-wide styling rules more efficient

--- a/client/src/stylesheets/Nav.css
+++ b/client/src/stylesheets/Nav.css
@@ -40,10 +40,15 @@ button.site-title {
   margin-left: auto;
 }
 
-.log-in {
+.log-in,
+.sign-up {
   font-size: 16px;
 }
 
 .user-buttons {
+  display: flex;
+}
+
+.not-logged {
   display: flex;
 }
