--- a/client/src/stylesheets/App.css
+++ b/client/src/stylesheets/App.css
@@ -1,14 +1,8 @@
-.app {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
 .posts {
+  flex-grow: 1;
   padding: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  height: 100%;
 }
