--- a/client/src/stylesheets/SignUp.css
+++ b/client/src/stylesheets/SignUp.css
@@ -2,4 +2,46 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.signup-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 40px;
+}
+
+.form-inputs {
+  display: grid;
+  grid-template-columns: 150px auto;
+  grid-template-rows: repeat(3, auto);
+  gap: 10px;
+}
+
+.form-inputs > label {
+  justify-self: end;
+  align-self: center;
+}
+
+.form-inputs > input {
+  height: 30px;
+}
+
+.signup-btn {
+  margin: 20px;
+  height: 40px;
+  width: 150px;
+  background-color: rgb(133, 164, 204);
+  border: solid 2px black;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.signup-btn:hover {
+  filter: brightness(1.1);
+}
+
+.signup-btn:active {
+  filter: brightness(1.5);
 }
