Update styling for post detail page

--- a/client/src/stylesheets/Comment.css
+++ b/client/src/stylesheets/Comment.css
@@ -6,6 +6,7 @@
   border-radius: 5px;
   width: 400px;
   padding: 10px 0px 10px 0px;
+  background-color: rgb(207, 207, 207);
 }
 
 .comment-header {
