--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,10 +16,13 @@ code {
 }
 
 #root {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 #root > div {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   background-color: rgb(93, 104, 117);
