--- a/client/src/stylesheets/Card.css
+++ b/client/src/stylesheets/Card.css
@@ -7,12 +7,13 @@
   border-radius: 10px;
   padding: 20px;
   background-color: rgb(170, 180, 192);
-  transition: height 0.5s, width 0.5s;
+  transition: height 0.5s, width 0.5s, border 0.5s;
 }
 
 .post-card:hover {
   height: 350px;
   width: 350px;
+  border: solid 2px rgb(221, 210, 167);
 }
 
 .card-title {
