--- a/client/src/stylesheets/Post.css
+++ b/client/src/stylesheets/Post.css
@@ -2,9 +2,21 @@
   display: flex;
   flex-direction: column;
   align-self: center;
+  align-items: center;
   width: 600px;
   height: 100%;
   padding: 40px;
+}
+
+.post-details {
+  background-color: rgb(207, 207, 207);
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .post-title {
@@ -20,10 +32,6 @@
   margin: 0;
   font-weight: normal;
   font-style: italic;
-}
-
-.post-content {
-  margin-left: 30px;
 }
 
 .post-comments {
@@ -47,6 +55,12 @@
   flex-direction: column;
   width: 400px;
   gap: 10px;
+}
+
+.comment-form > textarea {
+  padding: 10px;
+  outline: 0;
+  border-radius: 5px;
 }
 
 .submit-comment {
