Make homepage responsive on mobile devices

--- a/client/src/stylesheets/Nav.css
+++ b/client/src/stylesheets/Nav.css
@@ -53,3 +53,9 @@ button.site-title {
 .not-logged {
   display: flex;
 }
+
+@media (max-width: 500px) {
+  button.site-title {
+    width: auto;
+  }
+}
