Update styling of header and footer

--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -16,11 +16,14 @@ code {
 }
 
 #root {
-  height: 100%;
-}
-
-.page-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  flex-grow: 1;
+}
+
+#root > div {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(93, 104, 117);
 }
