--- a/admin/src/stylesheets/Nav.css
+++ b/admin/src/stylesheets/Nav.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(133, 164, 204);
+  background-color: rgb(64, 70, 77);
   flex-shrink: 0;
 }
 
@@ -23,6 +23,7 @@
   border: none;
   height: 80px;
   width: 100px;
+  color: rgb(238, 228, 187);
   cursor: pointer;
 }
 
