--- a/admin/src/stylesheets/Nav.css
+++ b/admin/src/stylesheets/Nav.css
@@ -48,3 +48,9 @@ button.site-title {
 .user-buttons {
   display: flex;
 }
+
+@media (max-width: 500px) {
+  button.site-title {
+    width: auto;
+  }
+}
