Optimize post details page for mobile

--- a/admin/src/stylesheets/Comment.css
+++ b/admin/src/stylesheets/Comment.css
@@ -6,6 +6,7 @@
   border-radius: 5px;
   width: 400px;
   padding: 10px 0px 10px 0px;
+  background-color: rgb(207, 207, 207);
 }
 
 .comment-header {
@@ -45,4 +46,19 @@
 .del-btn {
   margin: 5px;
   width: 50px;
+}
+
+@media (max-width: 500px) {
+  .comment-container {
+    width: 300px;
+    padding: 20px;
+  }
+
+  .comment-header {
+    margin-left: 0;
+  }
+
+  .comment-content {
+    width: 300px;
+  }
 }
